--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, [proper]}.
+{deps, []}.
+{project_plugins, [rebar3_proper]}.
+{profiles, [
+  {test, [
+    {deps, [proper]}
+  ]}
+]}.
